NEW: add first layer and spaghetti options
Change-Id: I6e2237a59a2e1fdb3a2f0432be3c7b22db944811
Signed-off-by: Stone Li <stone.li@bambulab.com>
(cherry picked from commit 382652d8da84198bd51caa9d33331b53c5ac6721)

--- a/src/slic3r/CMakeLists.txt
+++ b/src/slic3r/CMakeLists.txt
@@ -348,6 +348,8 @@ set(SLIC3R_GUI_SOURCES
     GUI/ReleaseNote.cpp
     GUI/Calibration.hpp
     GUI/Calibration.cpp
+    GUI/PrintOptionsDialog.hpp
+    GUI/PrintOptionsDialog.cpp
     Utils/json_diff.hpp
     Utils/json_diff.cpp
     GUI/KBShortcutsDialog.hpp
