--- a/cmake/modules/MacOSXBundleInfo.plist.in
+++ b/cmake/modules/MacOSXBundleInfo.plist.in
@@ -26,6 +26,94 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>${MACOSX_BUNDLE_BUNDLE_VERSION}</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+			<string>stl</string>
+			<string>STL</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>stl.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>STL</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LISsAppleDefaultForType</key>
+			<true/>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+			<string>obj</string>
+			<string>OBJ</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>BambuStudio.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>STL</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LISsAppleDefaultForType</key>
+			<true/>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+			<string>amf</string>
+			<string>AMF</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>BambuStudio.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>AMF</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LISsAppleDefaultForType</key>
+			<true/>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+			<string>3mf</string>
+			<string>3MF</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>BambuStudio.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>3MF</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LISsAppleDefaultForType</key>
+			<true/>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+			<string>gcode</string>
+			<string>GCODE</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>gcode.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>GCODE</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LISsAppleDefaultForType</key>
+			<true/>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+		</dict>
+	</array>
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>NSRequiresAquaSystemAppearance</key>
