NEW: add NetworkTestDialog
test www.bing.com
test bambulab host
test http service
test storage upload and upgrade
test storage downloading

Change-Id: Ia2aca1d3fdff5dd4e930df138e8c6a1b5aad2585
Signed-off-by: Stone Li <stone.li@bambulab.com>

--- a/src/slic3r/CMakeLists.txt
+++ b/src/slic3r/CMakeLists.txt
@@ -72,6 +72,8 @@ set(SLIC3R_GUI_SOURCES
     GUI/Widgets/wxStaticText2.hpp
     GUI/AboutDialog.cpp
     GUI/AboutDialog.hpp
+    GUI/NetworkTestDialog.cpp
+    GUI/NetworkTestDialog.hpp
     GUI/AuxiliaryDialog.cpp
     GUI/AuxiliaryDialog.hpp
     GUI/Auxiliary.cpp
