NEW: add text gizmo tool
Signed-off-by: yifan.wu <yifan.wu@bambulab.com>
Change-Id: I77fdf64340f580e6baa3260101fa1c6db7a4ab2d
(cherry picked from commit 2147c55134b4d9d1018d7e9f4f8d1a4d50c065f6)

--- a/src/libslic3r/CMakeLists.txt
+++ b/src/libslic3r/CMakeLists.txt
@@ -315,7 +315,6 @@ set(lisbslic3r_sources
     SLA/Clustering.hpp
     SLA/Clustering.cpp
     SLA/ReprojectPointsOnMesh.hpp
-
     Arachne/BeadingStrategy/BeadingStrategy.hpp
     Arachne/BeadingStrategy/BeadingStrategy.cpp
     Arachne/BeadingStrategy/BeadingStrategyFactory.hpp
@@ -356,6 +355,8 @@ set(lisbslic3r_sources
     Arachne/SkeletalTrapezoidationJoint.hpp
     Arachne/WallToolPaths.hpp
     Arachne/WallToolPaths.cpp
+    Shape/TextShape.hpp
+    Shape/TextShape.cpp
 )
 
 if (APPLE)
