Add Linux related build scripts
including following changes:
- Linux build scripts from SuperSlicer project;
- Update BuildLinux dev dependencies, remove unused bits;
- Update BuildLinuxImage to use nproc for cpus;
- CMake: render BuildLinuxImage and build_appimage templates;
- Fix "DSO missing" linking problems;
- Add Podman Containerfile for building;
- Update BuildLinux.sh to work better in container build;
- fixes to create AppImage inside container;
- add env to build environment;
- Update build instructions in Containerfile;

Change-Id: I73e30ab488cda8c1b0886cd34858e125596f282b
(cherry picked from commit 83fc26670ca592c91c7af1d4033a04b587cfd4cd)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -675,6 +675,11 @@ if(SLIC3R_BUILD_TESTS)
     add_subdirectory(tests)
 endif()
 
+if (NOT WIN32 AND NOT APPLE)
+    set(SLIC3R_APP_CMD "bambu-studio")
+    configure_file(${LIBDIR}/platform/unix/build_appimage.sh.in ${CMAKE_CURRENT_BINARY_DIR}/build_appimage.sh @ONLY)
+endif()
+
 option(BUILD_BBS_TEST_TOOLS          "Build bbs test tools" OFF)
 if(BUILD_BBS_TEST_TOOLS)
     add_subdirectory(bbs_test_tools)
