--- a/src/slic3r/CMakeLists.txt
+++ b/src/slic3r/CMakeLists.txt
@@ -416,7 +416,18 @@ target_link_libraries(libslic3r_gui libslic3r cereal imgui minilzo GLEW::GLEW Op
 if (MSVC)
     target_link_libraries(libslic3r_gui Setupapi.lib)
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    FIND_LIBRARY(WAYLAND_SERVER_LIBRARIES NAMES wayland-server)
+    FIND_LIBRARY(WAYLAND_EGL_LIBRARIES    NAMES wayland-egl)
+    FIND_LIBRARY(WAYLAND_CLIENT_LIBRARIES NAMES wayland-client)
+    find_package(CURL REQUIRED)
     target_link_libraries(libslic3r_gui ${DBUS_LIBRARIES} OSMesa)
+    target_link_libraries(libslic3r_gui
+        OpenGL::EGL
+        ${WAYLAND_SERVER_LIBRARIES}
+        ${WAYLAND_EGL_LIBRARIES}
+        ${WAYLAND_CLIENT_LIBRARIES}
+        ${CURL_LIBRARIES}
+    )
 elseif (APPLE)
     target_link_libraries(libslic3r_gui ${DISKARBITRATION_LIBRARY})
 endif()
