ENH: add freetype for occt
Signed-off-by: yifan.wu <yifan.wu@bambulab.com>
Change-Id: I3adcf4b27deb0953e059c3e7fa9b9d49e447c57b
(cherry picked from commit 400cff06210c62e4019ff6f7174216d2faeaa8e2)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -613,6 +613,7 @@ function(bambustudio_copy_dlls target config postfix output_dlls)
             ${CMAKE_PREFIX_PATH}/bin/occt/TKXCAF.dll
             ${CMAKE_PREFIX_PATH}/bin/occt/TKXDESTEP.dll
             ${CMAKE_PREFIX_PATH}/bin/occt/TKXSBase.dll
+            ${CMAKE_PREFIX_PATH}/bin/freetype.dll
          DESTINATION ${_out_dir})
 
     set(${output_dlls}
@@ -646,6 +647,8 @@ function(bambustudio_copy_dlls target config postfix output_dlls)
         ${_out_dir}/TKXCAF.dll
         ${_out_dir}/TKXDESTEP.dll
         ${_out_dir}/TKXSBase.dll
+
+        ${_out_dir}/freetype.dll
 
         PARENT_SCOPE
     )
