NEW: support send gcode to third-party printer
Thanks SoftForever for your works to support
sending a gcode file to third-party printer

Change-Id: I3cba43c8bd878f1f1c2fd5fae202ed4d922e8727
Signed-off-by: Stone Li <stone.li@bambulab.com>

--- a/src/slic3r/CMakeLists.txt
+++ b/src/slic3r/CMakeLists.txt
@@ -201,6 +201,8 @@ set(SLIC3R_GUI_SOURCES
     GUI/ParamsDialog.hpp
     GUI/ParamsPanel.cpp
     GUI/ParamsPanel.hpp
+    GUI/PrintHostDialogs.cpp
+    GUI/PrintHostDialogs.hpp
     GUI/AmsWidgets.cpp
     GUI/AmsWidgets.hpp
     GUI/MediaFilePanel.cpp
@@ -307,6 +309,8 @@ set(SLIC3R_GUI_SOURCES
     GUI/Jobs/BindJob.cpp
     GUI/Jobs/NotificationProgressIndicator.hpp
     GUI/Jobs/NotificationProgressIndicator.cpp
+    GUI/PhysicalPrinterDialog.hpp
+    GUI/PhysicalPrinterDialog.cpp
     GUI/ProgressStatusBar.hpp
     GUI/ProgressStatusBar.cpp
     GUI/BBLStatusBar.hpp
@@ -348,6 +352,8 @@ set(SLIC3R_GUI_SOURCES
     GUI/PublishDialog.hpp
 	GUI/RecenterDialog.cpp
     GUI/RecenterDialog.hpp
+    GUI/BonjourDialog.cpp
+    GUI/BonjourDialog.hpp
     GUI/BindDialog.cpp
     GUI/BindDialog.hpp
     GUI/SelectMachine.hpp
@@ -387,6 +393,10 @@ set(SLIC3R_GUI_SOURCES
     Utils/minilzo_extension.cpp
     Utils/ColorSpaceConvert.hpp
     Utils/ColorSpaceConvert.cpp
+    Utils/OctoPrint.hpp
+    Utils/OctoPrint.cpp
+    Utils/PrintHost.hpp
+    Utils/PrintHost.cpp
     Utils/NetworkAgent.cpp
     Utils/NetworkAgent.hpp
 )
