FIX: device video/tunnel functions, add local video tunnel
Change-Id: I9da97406544c233d5ba6903857db6ad6f7f851e1

--- a/resources/config.json
+++ b/resources/config.json
@@ -2,11 +2,17 @@
     "printers": [
         {
             "display_name": "Bambu Lab X1",
+            "func": {
+                "FUNC_LOCAL_TUNNEL": false
+            },
             "model_id": "BL-P002",
             "printer_type": "3DPrinter-X1"
         },
         {
             "display_name": "Bambu Lab X1 Carbon",
+            "func": {
+                "FUNC_LOCAL_TUNNEL": false
+            },
             "model_id": "BL-P001",
             "printer_type": "3DPrinter-X1-Carbon"
         }
