FIX:disable an item in dailytip temporarily
Change-Id: I4f60243336d1b6a247733674f75f721dce7444b6

--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -94,8 +94,8 @@ documentation_link = https://wiki.bambulab.com/en/software/bambu-studio/lay-on-f
 text = Object List\nDid you know that you can view all objects/parts in a list and change settings for each object/part?
 documentation_link = https://wiki.bambulab.com/en/software/bambu-studio/object-list
 
-[hint:Search Functionality]
-text = Search Functionality\nDid you know that you use the Search tool to quickly find a specific Bambu Studio setting? Or use the familiar shortcut <b>Ctrl+F</b>.
+#[hint:Search Functionality]
+#text = Search Functionality\nDid you know that you use the Search tool to quickly find a specific Bambu Studio setting? Or use the familiar shortcut <b>Ctrl+F</b>.
 
 [hint:Simplify Model]
 text = Simplify Model\nDid you know that you can reduce the number of triangles in a mesh using the Simplify mesh feature? Right-click the model and select Simplify model. Read more in the documentation.
