NEW:modify dailytips
Change-Id: I3adc91b6bc2a2288a034678ad2df9b963f3adcf9
(cherry picked from commit fad2d0edf5d87ba7044b257747dcfb9b1090776f)

--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -117,6 +117,42 @@ documentation_link = https://wiki.bambulab.com/en/software/bambu-studio/subtract
 text = STEP\nDid you know that you can improve your print quality by slicing a STEP file instead of an STL?\nBambu Studio supports slicing STEP files, providing smoother results than a lower resolution STL. Give it a try!
 documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/step
 
+[hint:Z seam location]
+text = Z seam location\nDid you know that you can customize the location of the Z seam, and even paint it on your print, to have it in a less visible location? This improves the overall look of your model. Check it out!
+documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/Seam
+
+[hint:Fine-tuning for flow rate]
+text = Fine-tuning for flow rate\nDid you know that flow rate can be fine-tuned for even better-looking prints? Depending on the material, you can improve the overall finish of the printed model by doing some fine-tuning. 
+documentation_link= https://wiki.bambulab.com/en/x1/manual/manual-flow-rate-tuning
+
+[hint:Split your prints into plates]
+text = Split your prints into plates\nDid you know that you can split a model that has a lot of parts into individual plates ready to print? This will simplify the process of keeping track of all the parts.
+documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/plates_management
+
+[hint:Speed up your print with Adaptive Layer Height]
+text = Speed up your print with Adaptive Layer Height\nDid you know that you can print a model even faster, by using the Adaptive Layer Height option? Check it out!
+documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/adaptive-layer-height
+
+[hint:Support painting]
+text = Support painting\nDid you know that you can paint the location of your supports? This feature makes it easy to place the support material only on the sections of the model that actually need it. 
+documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/support-painting
+
+[hint:Different types of supports]
+text = Different types of supports\nDid you know that you can choose from multiple types of supports? Tree supports work great for organic models, while saving filament and improving print speed. Check them out!
+documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/support
+
+[hint:Printing Silk Filament]
+text = Printing Silk Filament\nDid you know that Silk filament needs special consideration to print it successfully? Higher temperature and lower speed are always recommended for the best results.
+documentation_link= https://wiki.bambulab.com/en/x1/manual/printing-with-silk-filaments
+
+[hint:Brim for better adhesion]
+text = Brim for better adhesion\nDid you know that when printing models have a small contact interface with the printing surface, it's recommended to use a brim? 
+documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/auto-brim
+
+[hint:Set parameters for multiple objects]
+text = Set parameters for multiple objects\nDid you know that you can set slicing parameters for all selected objects at one time?
+documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/set-parameters-for-selected-objects
+
 #[hint:]
 #text = 
 #hypertext =
