NEW:add model mall system
Change-Id: Iccfe460cd7bfd11d91cdd7eddf142a8590e3c5b0

--- a/src/slic3r/CMakeLists.txt
+++ b/src/slic3r/CMakeLists.txt
@@ -358,6 +358,8 @@ set(SLIC3R_GUI_SOURCES
     GUI/BonjourDialog.hpp
     GUI/BindDialog.cpp
     GUI/BindDialog.hpp
+    GUI/ModelMall.hpp
+    GUI/ModelMall.cpp
     GUI/SelectMachine.hpp
     GUI/SelectMachine.cpp
     GUI/SendToPrinter.hpp
