--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -79,7 +79,7 @@ text = Timelapse\nDid you know that you can generate a timelapse video during ea
 documentation_link = https://wiki.bambulab.com/en/software/bambu-studio/Timelapse
 
 [hint:Auto-Arrange]
-text = Auto-Arrange\nDid you know that you can right-click the Arrange icon to adjust the size of the gap between objects and to allow automatic rotations?
+text = Auto-Arrange\nDid you know that you can auto-arrange all objects in your project?
 documentation_link = https://wiki.bambulab.com/en/software/bambu-studio/auto-arranging
 
 [hint:Auto-Orient]
@@ -87,7 +87,7 @@ text = Auto-Orient\nDid you know that you can rotate objects to an optimal orien
 documentation_link = https://wiki.bambulab.com/en/software/bambu-studio/auto-orientation
 
 [hint:Lay on Face]
-text = Lay on Face\nDid you know that you can quickly orient a model so that one of its faces sits on the print bed? Select the "Place on face" function or press the <b>F</b> key.
+text = Lay on Face\nDid you know that you can quickly orient a model so that one of its faces sits on the print bed? Select the \"Place on face\" function or press the <b>F</b> key.
 documentation_link = https://wiki.bambulab.com/en/software/bambu-studio/lay-on-face
 
 [hint:Object List]
