NEW: import svg files
Change-Id: I1658308f9d9529c969f7067d053f16f779f8b6a6
(cherry picked from commit bfcb05e24ef5224cabc42772e94cc0cbed3de412)

--- a/src/libslic3r/CMakeLists.txt
+++ b/src/libslic3r/CMakeLists.txt
@@ -108,6 +108,8 @@ set(lisbslic3r_sources
     Format/STL.hpp
     Format/SL1.hpp
     Format/SL1.cpp
+	Format/svg.hpp
+    Format/svg.cpp
     GCode/ThumbnailData.cpp
     GCode/ThumbnailData.hpp
     GCode/CoolingBuffer.cpp
