NEW:added dark mode
Change-Id: I3f61f1d93020e0a9dfba2c7d6cf6bf5194effcfa

--- a/src/slic3r/CMakeLists.txt
+++ b/src/slic3r/CMakeLists.txt
@@ -405,6 +405,16 @@ set(SLIC3R_GUI_SOURCES
     Utils/NetworkAgent.hpp
 )
 
+if (WIN32)
+    list(APPEND SLIC3R_GUI_SOURCES
+            GUI/dark_mode/dark_mode.hpp
+            GUI/dark_mode/IatHook.hpp
+            GUI/dark_mode/UAHMenuBar.hpp
+            GUI/dark_mode.hpp
+            GUI/dark_mode.cpp
+        )
+endif ()
+
 if (APPLE)
     list(APPEND SLIC3R_GUI_SOURCES
             Utils/RetinaHelperImpl.mm
