NEW: set bed type for partplate
Change-Id: I876e24fb424b16eeb674313c7e0e03a228bc4b35
Signed-off-by: Stone Li <stone.li@bambulab.com>

--- a/src/slic3r/CMakeLists.txt
+++ b/src/slic3r/CMakeLists.txt
@@ -265,6 +265,8 @@ set(SLIC3R_GUI_SOURCES
     GUI/RemovableDriveManager.hpp
     GUI/SendSystemInfoDialog.cpp
     GUI/SendSystemInfoDialog.hpp
+    GUI/SetBedTypeDialog.cpp
+    GUI/SetBedTypeDialog.hpp
     GUI/ImGuiWrapper.hpp
     GUI/ImGuiWrapper.cpp
     GUI/DeviceManager.hpp
