ENH:add next_button in dailytips
1.add next button in dailytips
2.adjust menuitem position of show tip in menu bar
3.add new tip

Change-Id: Idad011b5849d7bddeb36b3a3e7d843aa596023d4

--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -153,6 +153,17 @@ documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/auto-brim
 text = Set parameters for multiple objects\nDid you know that you can set slicing parameters for all selected objects at one time?
 documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/set-parameters-for-selected-objects
 
+[hint:Stack objects]
+text = Stack objects\nDid you know that you can stack objects as a whole one?
+documentation_link= https://wiki.bambulab.com/e/en/software/bambu-studio/stacking-objects
+
+[hint:Flush into support/objects/infill]
+text = Flush into support/objects/infill\nDid you know that you can save the wasted filament by flushing them into support/objects/infill during filament change? 
+documentation_link= https://wiki.bambulab.com/en/software/bambu-studio/reduce-wasting-during-filament-change
+
+[hint:Improve strength]
+text = Improve strength\nDid you know that you can use more wall loops and higher sparse infill density to improve the strength of the model?
+
 #[hint:]
 #text = 
 #hypertext =
