ENH: refine display of camera state and add setting
Change-Id: I85f02565e1581fde9a6c161f4fbed0283fda208f

--- a/resources/config.json
+++ b/resources/config.json
@@ -5,6 +5,7 @@
             "func": {
                 "FUNC_LOCAL_TUNNEL": false
             },
+            "camera_resolution":["720p","1080p"],
             "model_id": "BL-P002",
             "printer_type": "3DPrinter-X1"
         },
@@ -14,6 +15,7 @@
                 "FUNC_LOCAL_TUNNEL": false
             },
             "model_id": "BL-P001",
+            "camera_resolution":["720p","1080p"],
             "printer_type": "3DPrinter-X1-Carbon"
         }
     ]
