NEW: add extrusion calibration
1. display factor of extrusion calibration
2. add progress to calibration extrusion
3. support ext spool

Change-Id: Ic124a0097f16e6287c09f5f133eea84eeefb4000
Signed-off-by: Stone Li <stone.li@bambulab.com>

--- a/resources/config.json
+++ b/resources/config.json
@@ -18,6 +18,7 @@
                 "FUNC_ALTER_RESOLUTION": false,
                 "FUNC_AUTO_SWITCH_FILAMENT": false,
                 "FUNC_CHAMBER_FAN" : false,
+                "FUNC_EXTRUSION_CALI": true,
                 "FUNC_SEND_TO_SDCARD": false
             },
             "camera_resolution":["720p"],
@@ -29,6 +30,7 @@
         {
             "display_name": "Bambu Lab X1",
             "func": {
+                "FUNC_EXTRUSION_CALI": false,
                 "FUNC_LOCAL_TUNNEL": false
             },
             "camera_resolution":["720p","1080p"],
@@ -39,6 +41,7 @@
         {
             "display_name": "Bambu Lab X1 Carbon",
             "func": {
+                "FUNC_EXTRUSION_CALI": false,
                 "FUNC_LOCAL_TUNNEL": false
             },
             "model_id": "BL-P001",
