FIX: init_font crash
Change-Id: I2d2fd9f297e2980e789b124d3e026d0db1fa1602

--- a/src/imgui/CMakeLists.txt
+++ b/src/imgui/CMakeLists.txt
@@ -14,3 +14,7 @@ add_library(imgui STATIC
     imgui_draw.cpp
     imgui_widgets.cpp
 )
+
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+endif()
