--- a/resources/config.json
+++ b/resources/config.json
@@ -21,6 +21,7 @@
                 "FUNC_ALTER_RESOLUTION": false
             },
             "camera_resolution":["720p"],
+            "bed_temperature_limit": 100,
             "model_id": "C11",
             "printer_type": "C11"
         },
