--- a/resources/config.json
+++ b/resources/config.json
@@ -3,7 +3,6 @@
         {
             "display_name": "Bambu Lab P1P",
             "func": {
-                "FUNC_AUTO_LEVELING": true,
                 "FUNC_CHAMBER_TEMP": false,
                 "FUNC_FIRSTLAYER_INSPECT": false,
                 "FUNC_AI_MONITORING": false,
@@ -11,14 +10,13 @@
                 "FUNC_AUTO_RECOVERY_STEP_LOSS": false,
                 "FUNC_FLOW_CALIBRATION": false,
                 "FUNC_MONITORING": false,
-                "FUNC_RECORDING": false,
                 "FUNC_TIMELAPSE": false,
-                "FUNC_CAMERA_VIDEO": true,
                 "FUNC_MEDIA_FILE": false,
                 "FUNC_REMOTE_TUNNEL": false,
                 "FUNC_LOCAL_TUNNEL": true,
                 "FUNC_PRINT_WITHOUT_SD": false,
                 "FUNC_ALTER_RESOLUTION": false,
+                "FUNC_AUTO_SWITCH_FILAMENT": false,
                 "FUNC_SEND_TO_SDCARD": false
             },
             "camera_resolution":["720p"],
