ENH: adjust funtions for P1P
Change-Id: Id8ce17f6cae523f9e6a0ccd9903df6ebefda934e
Signed-off-by: Stone Li <stone.li@bambulab.com>

--- a/resources/config.json
+++ b/resources/config.json
@@ -7,16 +7,17 @@
                 "FUNC_FIRSTLAYER_INSPECT": false,
                 "FUNC_AI_MONITORING": false,
                 "FUNC_BUILDPLATE_MARKER_DETECT": false,
-                "FUNC_AUTO_RECOVERY_STEP_LOSS": false,
                 "FUNC_FLOW_CALIBRATION": false,
                 "FUNC_MONITORING": false,
                 "FUNC_TIMELAPSE": false,
                 "FUNC_MEDIA_FILE": false,
                 "FUNC_REMOTE_TUNNEL": false,
                 "FUNC_LOCAL_TUNNEL": true,
+                "FUNC_VIRTUAL_CAMERA" : false,
                 "FUNC_PRINT_WITHOUT_SD": false,
                 "FUNC_ALTER_RESOLUTION": false,
                 "FUNC_AUTO_SWITCH_FILAMENT": false,
+                "FUNC_CHAMBER_FAN" : false,
                 "FUNC_SEND_TO_SDCARD": false
             },
             "camera_resolution":["720p"],
