NEW: add build time in about dialog
Change-Id: Ibb27223568f19f39ec57c01af23376c325d3972b
Signed-off-by: Stone Li <stone.li@bambulab.com>

--- a/src/libslic3r/CMakeLists.txt
+++ b/src/libslic3r/CMakeLists.txt
@@ -3,6 +3,9 @@ project(libslic3r)
 
 include(PrecompiledHeader)
 
+string(TIMESTAMP COMPILE_TIME %Y%m%d-%H%M%S)
+set(SLIC3R_BUILD_TIME ${COMPILE_TIME})
+
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/libslic3r_version.h.in ${CMAKE_CURRENT_BINARY_DIR}/libslic3r_version.h @ONLY)
 
 if (MINGW)
