Revert "Merge branch 'SoftFever' into feature/calib"
This reverts commit 00f0468bf91992cd043b2deb7b8835b76160446b, reversing
changes made to e63abaae79f695aaed6f053bf39812d99e172be1.

# Conflicts:
#	version.inc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -704,6 +704,7 @@ elseif (SLIC3R_FHS)
             DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/${SIZE}x${SIZE}/apps RENAME BambuStudio.png
         )
     endforeach()
+    install(DIRECTORY ${SLIC3R_RESOURCES_DIR}/udev/ DESTINATION lib/udev/rules.d)
 elseif (CMAKE_MACOSX_BUNDLE)
     install(DIRECTORY "${SLIC3R_RESOURCES_DIR}/" DESTINATION "${CMAKE_INSTALL_PREFIX}/BambuStudio.app/Contents/resources")
 else ()
