update Tronxy setting id
Signed-off-by: SoftFever <103989404+SoftFever@users.noreply.github.com>

--- a/resources/profiles/Tronxy/filament/Tronxy Generic ABS.json
+++ b/resources/profiles/Tronxy/filament/Tronxy Generic ABS.json
@@ -1,7 +1,7 @@
 {
     "type": "filament",
     "filament_id": "GFB99",
-    "setting_id": "GFSB99_TRONXY_00",
+    "setting_id": "GFSB99_00",
     "name": "Tronxy Generic ABS",
     "from": "system",
     "instantiation": "true",
