--- a/resources/profiles/Tronxy/filament/Tronxy Generic PA.json
+++ b/resources/profiles/Tronxy/filament/Tronxy Generic PA.json
@@ -1,7 +1,7 @@
 {
     "type": "filament",
     "filament_id": "GFN99",
-    "setting_id": "GFSN99_TRONXY_00",
+    "setting_id": "GFSN99",
     "name": "Tronxy Generic PA",
     "from": "system",
     "instantiation": "true",
