--- a/resources/profiles/Tronxy/filament/Tronxy Generic PC.json
+++ b/resources/profiles/Tronxy/filament/Tronxy Generic PC.json
@@ -1,7 +1,7 @@
 {
     "type": "filament",
     "filament_id": "GFC99",
-    "setting_id": "GFSC99_TRONXY_00",
+    "setting_id": "GFSC99_00",
     "name": "Tronxy Generic PC",
     "from": "system",
     "instantiation": "true",
