--- a/resources/profiles/Tronxy/filament/Tronxy Generic PETG.json
+++ b/resources/profiles/Tronxy/filament/Tronxy Generic PETG.json
@@ -1,7 +1,7 @@
 {
     "type": "filament",
     "filament_id": "GFG99",
-    "setting_id": "GFSG99_TRONXY_00",
+    "setting_id": "GFSG99",
     "name": "Tronxy Generic PETG",
     "from": "system",
     "instantiation": "true",
