--- a/resources/profiles/Tronxy/filament/Tronxy Generic PLA.json
+++ b/resources/profiles/Tronxy/filament/Tronxy Generic PLA.json
@@ -1,7 +1,7 @@
 {
     "type": "filament",
     "filament_id": "GFL99",
-    "setting_id": "GFSL99_TRONXY_00",
+    "setting_id": "GFSL99",
     "name": "Tronxy Generic PLA",
     "from": "system",
     "instantiation": "true",
