--- a/resources/profiles/Tronxy/filament/Tronxy Generic PVA.json
+++ b/resources/profiles/Tronxy/filament/Tronxy Generic PVA.json
@@ -1,7 +1,7 @@
 {
     "type": "filament",
     "filament_id": "GFS99",
-    "setting_id": "GFSS99_TRONXY_00",
+    "setting_id": "GFSS99",
     "name": "Tronxy Generic PVA",
     "from": "system",
     "instantiation": "true",
