--- a/resources/profiles/Tronxy/filament/Tronxy Generic TPU.json
+++ b/resources/profiles/Tronxy/filament/Tronxy Generic TPU.json
@@ -1,7 +1,7 @@
 {
     "type": "filament",
     "filament_id": "GFU99",
-    "setting_id": "GFSU99_TRONXY_00",
+    "setting_id": "GFSU99",
     "name": "Tronxy Generic TPU",
     "from": "system",
     "instantiation": "true",
