--- a/resources/profiles/Tronxy/process/0.20mm Standard @Tronxy.json
+++ b/resources/profiles/Tronxy/process/0.20mm Standard @Tronxy.json
@@ -1,6 +1,6 @@
 {
     "type": "process",
-    "setting_id": "GP_TRONXY_004",
+    "setting_id": "GP004",
     "name": "0.20mm Standard @Tronxy",
     "from": "system",
     "inherits": "fdm_process_common",
