--- a/resources/profiles/Tronxy/process/0.28mm Extra Draft @Tronxy.json
+++ b/resources/profiles/Tronxy/process/0.28mm Extra Draft @Tronxy.json
@@ -1,6 +1,6 @@
 {
     "type": "process",
-    "setting_id": "GP_TRONXY_006",
+    "setting_id": "GP006",
     "name": "0.28mm Extra Draft @Tronxy",
     "from": "system",
     "instantiation": "true",
